--- a/chatroom_webprog/.env
+++ b/chatroom_webprog/.env
@@ -4,11 +4,11 @@ APP_KEY=base64:rA9YxKMqu3z7q0bqoTtveOCdb8Fi9fd52idoCIbhwA4=
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=ja-cdbr-azure-east-a.cloudapp.net
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=acsm_26af889e80f5d7e
+DB_USERNAME=b651deeff41c76
+DB_PASSWORD=a187e1e0
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
