--- a/chatroom_webprog/.env
+++ b/chatroom_webprog/.env
@@ -4,11 +4,11 @@ APP_KEY=base64:jYmJoGGrH6mS8mnruIvD94FudsTigs4JBl4Gh91WNRo=
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=ap-cdbr-azure-southeast-b.cloudapp.net
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=acsm_9c78423555ac8da
+DB_USERNAME=bee6e62b660502
+DB_PASSWORD=ae27d912
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
